--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "Responsive-Dashboard",
-  "version": "0.0.2",
-  "author": "Elliot Hesp",
-  "contributors": [
-    "Leonel Samayoa <leonel.e.samayoa@gmail.com> (http://gobliip.com)",
-    "Ricardo Pascua <rdpascua@outlook.com>"
-  ],
-  "scripts": {
-    "postinstall": "node node_modules/bower/bin/bower install"
+  "engines": {
+    "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "bower": "^1.3.9",
-    "gulp": "~3.8.0",
-    "gulp-connect": "^2.0.6",
-    "gulp-less": "~1.3.3",
-    "gulp-usemin": "^0.3.7",
-    "gulp-watch": "^0.6.9",
-    "gulp-wrap": "^0.3.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.5.0"
   }
 }
